%% NextAtlet database ER diagram
%% Source of truth: apps/NextAtlet.Server/NextAtlet.Infrastructure/Migrations/NextAtletDbContextModelSnapshot.cs
%% 15 DbSets → 14 tables (OrgVerification is an owned type folded into OrganizationProfiles).
%% NOTE: the "SiteId" columns on IndividualProfiles / OrganizationProfiles / SiteSnapshots and
%%       MediaAssets.OrganizationId are BARE uuid columns with NO foreign key constraint.

erDiagram
    Users ||--o{ SiteLogins : "has (Cascade)"
    Sites ||--o{ SiteLogins : "grants (Cascade)"
    Sites ||--o{ ActionTokens : "targets (Cascade)"
    Sites ||--o{ GuardianConsents : "for (Cascade)"
    Users ||--o{ GuardianConsents : "by (Restrict)"
    Sites ||--o{ MediaAssets : "owns opt (Cascade)"
    Sites |o--o| SiteSnapshots : "current draft (Restrict)"
    Sites |o--o| SiteSnapshots : "current published (Restrict)"
    Themes ||--o{ SiteSnapshots : "renders (Restrict)"
    Themes ||--o{ ChangeRequests : "theme (Restrict)"
    IndividualProfiles ||--o{ Memberships : "affiliates (Cascade)"
    OrganizationProfiles ||--o{ Memberships : "rosters (Cascade)"
    IndividualProfiles ||--o{ ChangeRequests : "targets (Cascade)"
    OrganizationProfiles ||--o{ ChangeRequests : "proposes (Cascade)"
    Users ||--o{ ChangeRequests : "author (Restrict)"
    Clubs ||--o{ ClubOfficials : "has (Cascade)"

    Sites {
        uuid Id PK
        string Slug UK
        string DisplayName
        string SiteTypeId "individual | organization"
        string VisibilityStateId "public | private"
        string VerificationStatusId
        string DefaultLocaleId "da | en"
        uuid CurrentDraftSnapshotId FK
        uuid CurrentPublishedSnapshotId FK
    }
    IndividualProfiles {
        uuid Id PK
        uuid SiteId "NO FK, NO index"
        string SportId "default judo"
        date DateOfBirth
        string ControlModeId
        string ConsentStateId
        string SelfTierId "never written"
    }
    OrganizationProfiles {
        uuid Id PK
        uuid SiteId "NO FK, NO index"
        string OrganizationTypeId
        string OrganizationTierId
        int AthleteSlotCount
        bool IsServerManaged
        string VerificationStatusId
        string Verification_MethodId "owned OrgVerification"
    }
    SiteSnapshots {
        uuid Id PK
        uuid SiteId "indexed, NO FK"
        uuid ThemeId FK
        jsonb Layout
        jsonb GlobalSettings
        datetime PublishedUtc
    }
    Themes {
        uuid Id PK
        string Name
        jsonb Manifest
        string PreviewImageUrl
        datetime RetiredUtc
    }
    Users {
        uuid Id PK
        string Email UK
        string AuthProviderId UK "Auth0 sub, nullable"
    }
    SiteLogins {
        uuid Id PK
        uuid UserId FK
        uuid SiteId FK
        string SiteRoleId "owner | guardian"
        string StatusId "pending | active | revoked"
        jsonb Permissions "always null (dead)"
    }
    ActionTokens {
        uuid Id PK "= link secret"
        string TypeId "invitation | consent | org_email_verification"
        uuid TargetSiteId FK
        datetime ExpiresUtc
        datetime AcceptedUtc "null = pending"
        jsonb Payload "polymorphic"
    }
    GuardianConsents {
        uuid Id PK
        uuid SiteId FK
        uuid GuardianUserId FK
        string MethodId "email"
        string TermsVersion
    }
    MediaAssets {
        uuid Id PK
        uuid AthleteSiteId FK "nullable"
        uuid OrganizationId "NO FK"
        string TypeId "image | video"
        string OriginId
        bool IsClubBranding
        string StorageKey
    }
    Memberships {
        uuid Id PK
        uuid IndividualProfileId FK
        uuid OrganizationId FK
        string RoleId
        string statusId
        bool OccupiesSlot
    }
    ChangeRequests {
        uuid Id PK
        uuid TargetProfileId FK
        uuid ProposingOrganizationId FK
        uuid ProposedByUserId FK
        uuid ThemeId FK
        jsonb ProposedLayout
        bool IsActive "no StatusId column"
    }
    Clubs {
        uuid Id PK
        string Source "UK with SourceKey"
        string SourceKey
        string CountryId
        string Name
        string Address
        stringarray SportIds
        bool IsActive
    }
    ClubOfficials {
        uuid Id PK
        uuid ClubId FK
        string Name
        string Email
        string Phone
        string RoleId
    }
